--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.6.2",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "pg": "^8.6.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
