Added: README.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "login-signup-form-JWT",
+  "name": "the-monk-store-jwt",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
